@@ -112,7 +112,8 @@ int tilp_err(int errcode)
 			tilp_info("%s\n", s);
 	}
 
-	free(s);
+	//free(s);
+
 	return errcode;
 }
 
